# ChangeLog for media-gfx/exiftags
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/ChangeLog,v 1.7 2004/09/21 23:31:10 kito Exp $

  21 Sep 2004; kito@gentoo.org :
  added ~ppc-macos keyword

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> exiftags-0.97.ebuild:
  virtual/glibc -> virtual/libc

  18 Jun 2004; David Holm <dholm@gentoo.org> exiftags-0.99.1.ebuild:
  Added to ~ppc.

*exiftags-0.99.1 (16 Jun 2004)

  16 Jun 2004; Alastair Tse <liquidx@gentoo.org> +exiftags-0.99.1.ebuild:
  version bump, thanks to Scott Shawcroft <shux_linux@comcast.net> (#53153)

  30 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> exiftags-0.97.ebuild:
  Adding amd64 keyword. Closing #45583.

*exiftags-0.97 (08 Mar 2003)

  08 Mar 2003; Alastair Tse <liquidx@gentoo.org> exiftags-0.97.ebuild:
  initial ebuild.
