@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/exiftags-0.99.1.ebuild,v 1.5 2004/09/21 23:29:16 kito Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/exiftags-0.99.1.ebuild,v 1.6 2005/04/20 14:16:12 liquidx Exp $
 
 DESCRIPTION="Extracts JPEG EXIF headers from digital camera photos"
 HOMEPAGE="http://johnst.org/sw/exiftags/"
@@ -8,7 +8,7 @@ SRC_URI="http://johnst.org/sw/${PN}/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~x86 ~amd64 ~ppc ~ppc-macos"
+KEYWORDS="x86 ~amd64 ~ppc ~ppc-macos"
 IUSE=""
 
 DEPEND=""
