@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/exiftags-0.97.ebuild,v 1.7 2004/07/01 10:48:47 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/exiftags-1.00.ebuild,v 1.1 2005/04/20 14:16:12 liquidx Exp $
 
 DESCRIPTION="Extracts JPEG EXIF headers from digital camera photos"
 HOMEPAGE="http://johnst.org/sw/exiftags/"
@@ -8,17 +8,17 @@ SRC_URI="http://johnst.org/sw/${PN}/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="x86 ~amd64"
+KEYWORDS="~x86 ~amd64 ~ppc ~ppc-macos"
 IUSE=""
 
-DEPEND="virtual/libc"
+DEPEND=""
 
 src_compile() {
 	make || die "make failed"
 }
 
 src_install() {
-	dobin exiftags exifcom || die
-	doman exiftags.1 exifcom.1
+	dobin exiftags exifcom exiftime || die
+	doman exiftags.1 exifcom.1 exiftime.1
 	dodoc README CHANGES
 }
