@@ -1,1 +1,0 @@
-MD5 5af0447f73cf8b3162b3d6564d49376a exiftags-0.97.tar.gz 42852
