@@ -1,0 +1,1 @@
+MD5 5dedd2336914f5a7c6ed3289cb7a3b1b exiftags-1.00.tar.gz 69162
