@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/exiftags
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/ChangeLog,v 1.7 2004/09/21 23:31:10 kito Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiftags/ChangeLog,v 1.8 2005/04/20 14:16:12 liquidx Exp $
+
+*exiftags-1.00 (20 Apr 2005)
+
+  20 Apr 2005; Alastair Tse <liquidx@gentoo.org> -exiftags-0.97.ebuild,
+  exiftags-0.99.1.ebuild, +exiftags-1.00.ebuild:
+  version bump
 
   21 Sep 2004; kito@gentoo.org :
   added ~ppc-macos keyword
